# CorpGlory

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  coutryShareTest.html  server.py  webSockeExample.html
App/: App.py
Game/: CMakeLists.txt  main.cpp
Game/Actions/: CMakeLists.txt
Game/Actions/inc/: Action.hpp  TeamActions.hpp
Game/Actions/src/: Action.cpp  TeamActions.cpp
Game/GameElements/: CMakeLists.txt
Game/GameElements/inc/: Company.hpp  GameElement.hpp  Team.hpp  User.hpp  World.hpp  WorldUsers.hpp
Game/GameElements/src/: Company.cpp  GameElement.cpp  Team.cpp  User.cpp  World.cpp  WorldUsers.cpp
Game/Models/: CMakeLists.txt
Game/Models/inc/: CompanyModel.hpp  Model.hpp  TeamModel.hpp  UserModel.hpp  WorldModel.hpp  WorldUsersModel.hpp
Game/Models/src/: CompanyModel.cpp  TeamModel.cpp  UserModel.cpp  WorldModel.cpp  WorldUsersModel.cpp
Game/NodeWrapper/: CMakeLists.txt  README.md  binding.gyp  buildDebug.sh
Game/NodeWrapper/inc/: GameWrapper.hpp
Game/NodeWrapper/src/: GameModule.cpp  GameWrapper.cpp  dummy.cpp
Game/Utils/: CMakeLists.txt
Game/Utils/inc/: ProducerConsumerQueue.hpp  Random.hpp  Typedefs.hpp
Game/Utils/src/: Random.cpp
Game/inc/: Game.hpp  Player.hpp
Game/src/: Game.cpp  Main.cpp  Player.cpp
Models/: User.py  __init__.py
Server/: index.html  test.js  wsCommands.js
World/: Environment.py
docs/: build.txt
game/: main.cpp
gameClient/: README.md
gameClient/.meteor/: packages  versions
gameClient/client/communicatoin/: communication.js
gameClient/client/config/: router.js
gameClient/client/stylesheets/: demo.css
gameClient/client/views/: blank.html  gameScreen.html  gameScreen.js  game_screen.html  mainLayout.js  mapData.js  mapMarketShare.js  mapRegion.js  marketShare.html  marketShare.js  renderMap.js  tooltip.html  world.html  worldMap.js
gameClient/lib/: collections.js  methods.js
gameClient/server/: server.js
landing/: index.html
landing_page/: landing_corp.html
landing_page/css/: style.css
meteor/CorpGlory/: .gitignore
meteor/CorpGlory/server/: publish.js
meteor/StartUpGame/: .gitignore  StartUpGame.sublime-project  StartUpGame.sublime-workspace
meteor/StartUpGame/.meteor/: .id  packages  versions
meteor/StartUpGame/lib/: collections.js  methods.js
meteor/StartUpGame/server/: file.js
playServer/: build.sbt
playServer/project/: build.properties
server/: .gitignore  Communacation.py  GameManager.py  README.txt  app.js  corpglory.sublime-project  corpglory.sublime-workspace  game.js  index.html  package.json  player.js  render.js  server.py  test.js  wsCommands.js
server/Game/: Game.py
server/Game/Elements/: CompanyElement.py  GameElement.py  NewsElement.py  UserElement.py  WorldElement.py
server/Game/Managers/: CompanyManager.py  GameManager.py  NewsManager.py  ProductsManager.py  UserManager.py  WorldManager.py
server/Game/Models/: CompanyModel.py  NewsModel.py  NewsStat.py  Product.py  ProductModel.py  User.py  UserModel.py  World.py  WorldModel.py
server/Models/: User.py
server/Tools/: Serialization.py  __init__.py
server/World/: Environment.py
server/blog/: blogManager.js  route.js
server/blog/posts/: a-new-entertainment-for-entrepreneurs.xml  a-new-entertainment-for-startuppers.xml  data.json  data.xml  learn-marketing-pr-sales-from-films-part-1.xml
server/game/: game.js  playerConnection.js  regions.js  route.js
server/game/players/: botPlayer.js  player.js
server/game/regions/: region.js  regions.js
server/logs/: cerr.txt  cout.txt
server/public/css/: corpglory.css  game.css  main.css  one-page-wonder.css  style.css  style.less
server/subscriptions/: route.js  subscriptionManager.js
server/views/: blog.ejs  game.ejs  index.ejs  press.ejs  subscribtions.ejs  subscribtionsInvalid.ejs  subscribtionsOk.ejs  subscriptionsOk.ejs
serverok/: package.json
test/Elements/: test_userElement.py
(+143 files in other folders)
